--- a/PokeDuelServer/nbproject/project.properties
+++ b/PokeDuelServer/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.jar=${dist.dir}/PokeDuelServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mariadb-java-client-1.4.5.jar=lib/mariadb-java-client-1.4.5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mariadb-java-client-1.4.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,11 +55,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pokeduelserver.PokeDuelServer
+main.class=pokeduelserver.DBConnection
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
