created common nb project

--- a/PokeDuelCommon/nbproject/project.properties
+++ b/PokeDuelCommon/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=PokeDuelServer
-application.vendor=rushi_000
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -23,16 +22,12 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PokeDuelServer.jar
+dist.jar=${dist.dir}/PokeDuelCommon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-1.4.5.jar=lib/mariadb-java-client-1.4.5.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mariadb-java-client-1.4.5.jar}:\
-    ${reference.PokeDuelCommon.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,13 +51,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pokeduelserver.DBConnection
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.PokeDuelCommon=../PokeDuelCommon
-reference.PokeDuelCommon.jar=${project.PokeDuelCommon}/dist/PokeDuelCommon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
