--- a/PokeDuelServer/nbproject/project.properties
+++ b/PokeDuelServer/nbproject/project.properties
@@ -56,11 +56,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pokeduelserver.DBConnection
+main.class=connectors.DBConnection
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 project.PokeDuelCommon=../PokeDuelCommon
 reference.PokeDuelCommon.jar=${project.PokeDuelCommon}/dist/PokeDuelCommon.jar
 run.classpath=\
