--- a/PokeDuelClient/nbproject/project.properties
+++ b/PokeDuelClient/nbproject/project.properties
@@ -29,7 +29,8 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.PokeDuelCommon.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,6 +59,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=JDK_1.7
+project.PokeDuelCommon=../PokeDuelCommon
+reference.PokeDuelCommon.jar=${project.PokeDuelCommon}/dist/PokeDuelCommon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
